--- a/prize/src/main/resources/templates/signup.html
+++ b/prize/src/main/resources/templates/signup.html
@@ -12,7 +12,7 @@
 <div class="container w-50 p-3">
     <h1 class="display-5">Sign Up</h1>
 
-    <form action="#" th:action="@{/signup}" method="POST">
+    <form th:action="@{/signup}" method="POST">
 
         <div id="success-msg" class="alert alert-success"
              th:if="${signupSuccess}">
@@ -23,15 +23,9 @@
             <span th:text="${signupError}"></span>
         </div>
 
-
-        <div class="mb-3">
-            <label for="inputName">Name</label>
-            <input id="inputName" type="input" class="form-control"
-                   name="name">
-        </div>
         <div class="mb-3">
             <label for="inputUsername">Username</label>
-            <input id="inputUsername" type="input" class="form-control"
+            <input id="inputUsername" type="text" class="form-control"
                    name="username">
         </div>
         <div class="mb-3">
