--- a/prize/src/main/resources/templates/fragments/Header.html
+++ b/prize/src/main/resources/templates/fragments/Header.html
@@ -2,6 +2,7 @@
 <html lang="en" xmlns:th="https://www.thymeleaf.org"
       xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
 <head>
+    <title>Prizes Web Application</title>
     <meta charset="UTF-8">
     <link th:rel="stylesheet" th:href="@{/css/bootstrap.min.css}">
     <script th:src="@{/js/bootstrap.min.js}"></script>
@@ -16,41 +17,37 @@
             <span class="navbar-toggler-icon"></span>
         </button>
 
-<!--        <div class="collapse navbar-collapse" id="navbarSupportedContent">-->
-<!--&lt;!&ndash;            <ul class="navbar-nav me-auto mb-2 mb-lg-0">&ndash;&gt;-->
-<!--&lt;!&ndash;                <li class="nav-item">&ndash;&gt;-->
-<!--&lt;!&ndash;                    <a class="nav-link" th:href="@{/}">Home</a>&ndash;&gt;-->
-<!--&lt;!&ndash;                </li>&ndash;&gt;-->
-<!--&lt;!&ndash;            </ul>&ndash;&gt;-->
-<!--        </div>-->
-        <div sec:authorize="isAuthenticated()" class="collapse navbar-collapse" id="navbarSupportedContent">>
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" data-bs-popper="dropdown" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                       <span sec:authentication="name"></span></a>
-                    <ul class="dropdown-menu" data-bs-popper="static">
-                        <li><a class="dropdown-item" th:href="@{/logout}">logout</a></li>
-                        <li><a class="dropdown-item" th:href="@{/profile}"></a>edit profile</li>
-                    </ul>
-                 </li>
-<!--                <li class="nav-item">-->
-<!--                    <a class="nav-link" href="#">สวัสดี <b><span sec:authentication="name"></span></b></a>-->
-<!--                </li>-->
-<!--                <li class="nav-item">-->
-<!--                    <a class="btn btn-primary" th:href="@{/logout}">Logout</a>-->
-<!--                </li>-->
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav me-auto mb-lg-0">
+                <li class="nav-item">
+                    <a class="nav-link" th:href="@{/prizes}">รางวัลที่ได้รับ</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" th:href="@{/profiles}">หน้าโปรไฟล์</a>
+                </li>
+                <li sec:authorize="isAuthenticated()" class="nav-item">
+                    <a class="nav-link" th:href="@{/admin/members}">User</a>
+                </li>
+                <li sec:authorize="isAuthenticated()" class="nav-item">
+                    <p>
+                        คุณ <span sec:authentication="name"></span>
+                    </p>
+                </li>
+                <li sec:authorize="isAuthenticated()" class="nav-item">
+                    <a class="btn btn-primary btn-sm" th:href="@{/logout}">logout</a>
+                </li>
             </ul>
         </div>
+
         <div sec:authorize="isAnonymous()">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                    <a class="btn btn-primary" th:href="@{/login}">Login</a>
+                    <a class="btn btn-primary btn-sm" th:href="@{/login}">เข้าสู่ระบบ</a>
                 </li>
             </ul>
         </div>
     </div>
 </nav>
 
-</nav>
 </body>
 </html>
