--- a/prize/src/main/resources/templates/home.html
+++ b/prize/src/main/resources/templates/home.html
@@ -11,17 +11,16 @@
 <div th:insert="~{fragments/header :: header}"></div>
 <div class="container">
 
-    <h1 class="display-6">Welcome to Cafe</h1>
-
-    <p><span th:text="${greeting}"></span></p>
+    <h1 class="display-6">Welcome to Web Application for collect your prizes</h1>
 
     <div sec:authorize="isAuthenticated()">
-        <p>Khun <b><span sec:authentication="name"></span></b></p>
+        <p><span th:text="${greeting}"></span> คุณ <b><span sec:authentication="name"></span></b></p>
+        <a class="link-offset-3-hover link-underline-opacity-0" th:href="@{/profiles/add}">เพิ่มเติมโปรไฟล์</a>
         <a class="btn btn-primary" th:href="@{/logout}">Logout</a>
     </div>
     <div sec:authorize="isAnonymous()">
-        <a class="btn btn-primary" th:href="@{/login}">Login</a>
-        <a class="btn btn-light" th:href="@{/signup}">Sign Up</a>
+        <a class="btn btn-primary" th:href="@{/login}">เข้าสู่ระบบ</a>
+        <a class="btn btn-light" th:href="@{/signup}">ลงทะเบียน</a>
     </div>
 
 
