--- a/prize/src/main/resources/templates/prize-add.html
+++ b/prize/src/main/resources/templates/prize-add.html
@@ -12,7 +12,7 @@
 <div th:insert="~{fragments/header :: header}"></div>
 
 
-<div class="container w-50 p-3">
+<div class="container w-50 p-5 my-5">
     <h1 class="display-5">เพิ่มรางวัลของฉัน</h1>
     <form th:action="@{/prizes/add}" method="post">
         <div class="form-group ">
@@ -55,6 +55,7 @@
                    name="description"></textarea>
         </div>
         <button id="submit-button" type="submit" class="btn btn-primary">ยืนยัน</button>
+        <a id="back-button" class="btn btn-secondary" th:href="@{/prizes}">ย้อนกลับ</a>
         </div>
     </form>
 </div>
