--- a/prize/src/main/resources/templates/profile-view.html
+++ b/prize/src/main/resources/templates/profile-view.html
@@ -10,8 +10,8 @@
 <body>
 <div th:insert="~{fragments/header :: header}"></div>
 
-<div class="container w-50 p-3">
-    <div class="col-3">
+<div class="container w-75 p-5 my-5">
+    <div class="row">
         <h1 class="display-6">หน้าโปรไฟล์ของฉัน</h1>
         <a class="link-offset-3-hover link-underline-opacity-0" th:href="@{/profiles/edit}">แก้ไขโปรไฟล์</a>
     </div>
