--- a/prize/src/main/resources/templates/fragments/Header.html
+++ b/prize/src/main/resources/templates/fragments/Header.html
@@ -8,7 +8,7 @@
     <script th:src="@{/js/bootstrap.min.js}"></script>
 </head>
 <body>
-<nav class="navbar navbar-expand-lg navbar-light bg-light" th:fragment="header">
+<nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top" th:fragment="header">
 
     <div class="container-fluid">
         <a class="navbar-brand" th:href="@{/}">Prize</a>
@@ -25,15 +25,19 @@
                 <li class="nav-item">
                     <a class="nav-link" th:href="@{/profiles}">หน้าโปรไฟล์</a>
                 </li>
-                <li sec:authorize="isAuthenticated()" class="nav-item">
+                <li sec:authorize="isAuthenticated() and hasRole('ADMIN')" class="nav-item">
                     <a class="nav-link" th:href="@{/admin/members}">User</a>
                 </li>
-                <li sec:authorize="isAuthenticated()" class="nav-item">
-                    <p>
-                        คุณ <span sec:authentication="name"></span>
-                    </p>
+
+            </ul>
+        </div>
+
+        <div sec:authorize="isAuthenticated()">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0 p-3">
+                <li sec:authorize="isAuthenticated()" class="nav-item mx-3">
+                    คุณ <span sec:authentication="name"></span>
                 </li>
-                <li sec:authorize="isAuthenticated()" class="nav-item">
+                <li sec:authorize="isAuthenticated()" class="nav-item ">
                     <a class="btn btn-primary btn-sm" th:href="@{/logout}">logout</a>
                 </li>
             </ul>
