--- a/prize/src/main/resources/templates/member-all.html
+++ b/prize/src/main/resources/templates/member-all.html
@@ -10,7 +10,7 @@
 <body>
 <div th:insert="~{fragments/header :: header}"></div>
 
-<div class="container w-50 p-3">
+<div class="container w-50 p-5 my-5">
     <h1 class="display-6">Member's Web application Prize</h1>
 
     <table class="table table-bordered table-striped table-hover">
@@ -30,10 +30,9 @@
                     <a class="btn btn-primary btn-sm" th:href="@{/admin/members/edit/{id} (id=${member.id})}">Edit</a>
                 </td>
                 <td>
-                    <form th:action="@{/member/delete/{id}(id=${member.id})}">
-                        <a class="btn btn-danger btn-sm" id="delete-button" onclick="return confirm('ต้องการลบข้อมูลนี้หรือไม่?')" type="submit">Show</a>
+                    <form th:action="@{/admin/members/delete/{id} (id=${member.id})}" method="post">
+                        <button class="btn btn-danger btn-sm" id="delete-button" onclick="return confirm('ต้องการลบข้อมูลนี้หรือไม่?')" type="submit">Delete</button>
                     </form>
-
                 </td>
             </tr>
         </tbody>
