--- a/prize/src/main/resources/templates/prize-view.html
+++ b/prize/src/main/resources/templates/prize-view.html
@@ -10,7 +10,7 @@
 <body>
 <div th:insert="~{fragments/header :: header}"></div>
 
-<div class="container w-50 p-3">
+<div class="container w-50 p-5 my-5">
     <h1 class="display-6">รายการรางวัลของฉัน</h1>
     <form th:object="${prize}">
         <div class="mb-3">
@@ -50,7 +50,7 @@
         </div>
     </form>
     <div class="d-grid gap-2 d-md-block">
-        <a class="btn btn-primary" th:href="@{/prizes}">ย้อนกลับ</a>
+        <a class="btn btn-secondary" th:href="@{/prizes}">ย้อนกลับ</a>
         <a class="btn btn-primary" th:href="@{/prizes/edit/{id}(id=${prize.id})}">แก้ไข</a>
     </div>
 
