--- a/prize/src/main/resources/templates/profile-add.html
+++ b/prize/src/main/resources/templates/profile-add.html
@@ -11,8 +11,8 @@
 <body>
 <div th:insert="~{fragments/header :: header}"></div>
 
-<div class="container w-50 p-3">
-    <h1 class="display-6">เพิ่มเติมหน้าโปรไฟล์ของฉัน</h1>
+<div class="container w-50 p-5 my-5">
+    <h1 class="display-6">เพิ่มหน้าโปรไฟล์ของฉัน</h1>
 
     <form th:action="@{/profiles/add}" method="post">
         <div class="form-group mb-3">
@@ -30,7 +30,7 @@
             </div>
             <div>
                 <label for="inputBirthDay">วันเกิด</label>
-                <input id="inputBirthDay" type="date" class="form-control" name="birthDay" placeholder="กรอกวันเกิด" data-date-language="th-th">
+                <input id="inputBirthDay" type="date" class="form-control" name="birthDay" placeholder="กรอกวันเกิด">
             </div>
             <button id="submit-button" type="submit" class="btn btn-primary">ยืนยัน</button>
         </div>
