--- a/prize/src/main/resources/templates/signup.html
+++ b/prize/src/main/resources/templates/signup.html
@@ -9,15 +9,15 @@
 <body>
 <div th:insert="~{fragments/header :: header}"></div>
 
-<div class="container w-50 p-3">
+<div class="container w-50 p-5 my-5">
     <h1 class="display-5">Sign Up</h1>
 
     <form th:action="@{/signup}" method="POST">
 
-        <div id="success-msg" class="alert alert-success"
-             th:if="${signupSuccess}">
-            Successfully signed up! Please <a th:href="@{/login}">login</a>.
-        </div>
+<!--        <div id="success-msg" class="alert alert-success"-->
+<!--             th:if="${signupSuccess}">-->
+<!--            Successfully signed up! Please <a th:href="@{/login}">login</a>.-->
+<!--        </div>-->
         <div id="error-msg" class="alert alert-danger"
              th:if="${signupError}">
             <span th:text="${signupError}"></span>
