--- a/prize/src/main/resources/templates/prize-add.html
+++ b/prize/src/main/resources/templates/prize-add.html
@@ -3,7 +3,7 @@
       xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
 <head>
     <meta charset="UTF-8">
-    <title>Prizes Web Application</title>
+    <title>Add Prizes Page</title>
     <link th:rel="stylesheet" th:href="@{/css/bootstrap.min.css}">
     <script th:src="@{/js/bootstrap.min.js}"></script>
 
@@ -18,22 +18,22 @@
         <div class="form-group ">
         <div class="mb-3">
             <label for="inputDayToGet">วันที่</label>
-            <input id="inputDayToGet" type="date" class="form-control" data-date-language="th-th"
+            <input required id="inputDayToGet" type="date" class="form-control" data-date-language="th-th"
                    name="dayToGet">
         </div>
         <div class="mb-3">
             <label for="inputSource">หน่วยงานที่จัด</label>
-            <input id="inputSource" type="text" class="form-control" placeholder="กรอกชื่อหน่วยงานที่เกี่ยวข้อง"
+            <input required id="inputSource" type="text" class="form-control" placeholder="กรอกชื่อหน่วยงานที่เกี่ยวข้อง"
                    name="sources">
         </div>
         <div class="mb-3">
             <label for="inputTournaments">กิจกรรม</label>
-            <input id="inputTournaments" type="text" class="form-control" placeholder="กรอกชื่อกิจกรรมที่เข้าร่วม"
+            <input required id="inputTournaments" type="text" class="form-control" placeholder="กรอกชื่อกิจกรรมที่เข้าร่วม"
                    name="tournaments">
         </div>
         <div class="mb-3">
             <label for="inputLevel">รางวัลที่ได้รับ</label>
-            <input id="inputLevel" type="text" class="form-control" placeholder="กรอกชื่อรางวัลที่ได้รับ"
+            <input required id="inputLevel" type="text" class="form-control" placeholder="กรอกชื่อรางวัลที่ได้รับ"
                    name="level">
         </div>
             <div class="mb-3">
@@ -46,7 +46,7 @@
             </div>
         <div class="mb-3">
             <label for="inputNameGiver">ชื่อผู้มอบรางวัล</label>
-            <input id="inputNameGiver" type="text" class="form-control" placeholder="กรอกชื่อผู้มอบรางวัล"
+            <input required id="inputNameGiver" type="text" class="form-control" placeholder="กรอกชื่อผู้มอบรางวัล"
                    name="nameGiver">
         </div>
         <div class="mb-3">
