--- a/prize/src/main/resources/templates/fragments/Header.html
+++ b/prize/src/main/resources/templates/fragments/Header.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="https://www.thymeleaf.org"
       xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
 <head>
-    <title>Prizes Web Application</title>
+    <title>Header</title>
     <meta charset="UTF-8">
     <link th:rel="stylesheet" th:href="@{/css/bootstrap.min.css}">
     <script th:src="@{/js/bootstrap.min.js}"></script>
@@ -20,13 +20,13 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-lg-0">
                 <li class="nav-item">
-                    <a class="nav-link" th:href="@{/prizes}">รางวัลที่ได้รับ</a>
+                    <a class="nav-link" id="prizes-link" th:href="@{/prizes}">รางวัลที่ได้รับ</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" th:href="@{/profiles}">หน้าโปรไฟล์</a>
+                    <a class="nav-link" id="profile-link" th:href="@{/profiles}">หน้าโปรไฟล์</a>
                 </li>
                 <li sec:authorize="isAuthenticated() and hasRole('ADMIN')" class="nav-item">
-                    <a class="nav-link" th:href="@{/admin/members}">User</a>
+                    <a class="nav-link" id="user-link" th:href="@{/admin/members}">User</a>
                 </li>
 
             </ul>
@@ -38,7 +38,7 @@
                     คุณ <span sec:authentication="name"></span>
                 </li>
                 <li sec:authorize="isAuthenticated()" class="nav-item ">
-                    <a class="btn btn-primary btn-sm" th:href="@{/logout}">logout</a>
+                    <a class="btn btn-primary btn-sm" id="logout-button" th:href="@{/logout}">logout</a>
                 </li>
             </ul>
         </div>
@@ -46,7 +46,7 @@
         <div sec:authorize="isAnonymous()">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                    <a class="btn btn-primary btn-sm" th:href="@{/login}">เข้าสู่ระบบ</a>
+                    <a class="btn btn-primary btn-sm" id="login-button" th:href="@{/login}">เข้าสู่ระบบ</a>
                 </li>
             </ul>
         </div>
