--- a/prize/src/main/resources/templates/signup.html
+++ b/prize/src/main/resources/templates/signup.html
@@ -21,12 +21,12 @@
 
         <div class="mb-3">
             <label for="inputUsername">Username</label>
-            <input id="inputUsername" type="text" class="form-control"
+            <input required id="inputUsername" type="text" class="form-control"
                    name="username">
         </div>
         <div class="mb-3">
             <label for="inputPassword">Password</label>
-            <input id="inputPassword" type="password" class="form-control"
+            <input required id="inputPassword" type="password" class="form-control"
                    name="password">
         </div>
         <button id="submit-button" type="submit" class="btn btn-primary">Sign Up</button>
