--- a/prize/src/main/resources/templates/prize-edit.html
+++ b/prize/src/main/resources/templates/prize-edit.html
@@ -20,22 +20,22 @@
         </div>
         <div class="mb-3">
             <label for="inputDayToGet">วันที่</label>
-            <input th:value="${prizes.dayToGet}"
+            <input required th:value="${prizes.dayToGet}"
                    name="dayToGet" id="inputDayToGet" type="date" class="form-control" data-date-language="th-th">
         </div>
         <div class="mb-3">
             <label for="inputSource">หน่วยงานที่จัด</label>
-            <input th:value="${prizes.sources}"
+            <input required th:value="${prizes.sources}"
                    name="sources" id="inputSource" type="text" class="form-control">
         </div>
         <div class="mb-3">
             <label for="inputTournaments">กิจกรรม</label>
-            <input th:value="${prizes.tournaments}"
+            <input required th:value="${prizes.tournaments}"
                    id="inputTournaments" type="text" class="form-control" name="tournaments">
         </div>
         <div class="mb-3">
             <label for="inputLevel">รางวัลที่ได้รับ</label>
-            <input th:value="${prizes.level}"
+            <input required th:value="${prizes.level}"
                    id="inputLevel" type="text" class="form-control"  name="level">
         </div>
         <div class="mb-3">
@@ -48,7 +48,7 @@
         </div>
         <div class="mb-3">
             <label for="inputNameGiver">ชื่อผู้มอบรางวัล</label>
-            <input th:value="${prizes.nameGiver}"
+            <input required th:value="${prizes.nameGiver}"
                    id="inputNameGiver" type="text" class="form-control" name="nameGiver">
         </div>
         <div class="mb-3">
