--- a/prize/src/main/resources/templates/profile-edit.html
+++ b/prize/src/main/resources/templates/profile-edit.html
@@ -15,27 +15,27 @@
 
     <form th:action="@{/profiles/edit}" th:object="${profiles}" method="post">
         <div class="mb-3">
-            <input th:value="${profiles.id}"
+            <input required th:value="${profiles.id}"
                    name="id" id="inputId" type="text" class="visually-hidden">
         </div>
         <div class="mb-3">
             <label for="inputFirstName">ชื่อ</label>
-            <input th:value="${profiles.firstName}"
+            <input required th:value="${profiles.firstName}"
                    name="firstName" id="inputFirstName" type="text" class="form-control">
         </div>
         <div class="mb-3">
             <label for="inputLastName">นามสกุล</label>
-            <input th:value="${profiles.lastName}"
+            <input required th:value="${profiles.lastName}"
                    name="lastName" id="inputLastName" type="text" class="form-control">
         </div>
         <div class="mb-3">
             <label for="inputEmail">e-mail</label>
-            <input th:value="${profiles.email}"
+            <input required th:value="${profiles.email}"
                    name="email" id="inputEmail" type="email" class="form-control">
         </div>
         <div class="mb-3">
             <label for="inputBirthDay">วันเกิด</label>
-            <input th:value="${profiles.birthDay}"
+            <input required th:value="${profiles.birthDay}"
                    name="birthDay" id="inputBirthDay" type="date" class="form-control" data-date-language="th-th">
         </div>
         <div class="mb-3">
